Fix: Remove deprecated split config symbols

--- a/config/boards/shields/formatrix/formatrix_left.conf
+++ b/config/boards/shields/formatrix/formatrix_left.conf
@@ -1,3 +1,5 @@
 # FORM.MATRIX Left Configuration
+# Copyright (c) 2026 FORM LABS
+
+# Split keyboard mode - central (left side)
 CONFIG_ZMK_SPLIT=y
-CONFIG_ZMK_SPLIT_BLE_ROLE_CENTRAL=y
