--- a/config/boards/shields/formatrix/formatrix_right.conf
+++ b/config/boards/shields/formatrix/formatrix_right.conf
@@ -1,3 +1,5 @@
 # FORM.MATRIX Right Configuration
-CONFIG_ZMK_SPLIT=y
-CONFIG_ZMK_SPLIT_BLE_ROLE_PERIPHERAL=y
+# Copyright (c) 2026 FORM LABS
+
+# Split keyboard mode - peripheral (right side)
+# No special config needed - ZMK auto-detects
