--- a/config/boards/shields/formatrix/formatrix.conf
+++ b/config/boards/shields/formatrix/formatrix.conf
@@ -9,3 +9,6 @@ CONFIG_ZMK_BATTERY_REPORTING=y
 
 # Sleep timeout (15 minutes)
 CONFIG_ZMK_IDLE_TIMEOUT=900000
+
+# Start advertising on boot - no key press needed!
+CONFIG_BT_DISCARDABLE_EXPERIMENTAL=y
