--- a/config/boards/shields/formatrix/formatrix.conf
+++ b/config/boards/shields/formatrix/formatrix.conf
@@ -12,3 +12,10 @@ CONFIG_ZMK_IDLE_TIMEOUT=900000
 
 # Start advertising on boot - no key press needed!
 CONFIG_BT_DISCARDABLE_EXPERIMENTAL=y
+
+# Enable built-in LED on nice!nano
+CONFIG_ZMK_LED=y
+CONFIG_LED=y
+
+# LED brightness (0-100)
+CONFIG_ZMK_LED_BRT=50
