Improve Bluetooth pairing: auto advertising on boot

--- a/config/boards/shields/formatrix/formatrix.conf
+++ b/config/boards/shields/formatrix/formatrix.conf
@@ -10,12 +10,10 @@ CONFIG_ZMK_BATTERY_REPORTING=y
 # Sleep timeout (15 minutes)
 CONFIG_ZMK_IDLE_TIMEOUT=900000
 
-# Start advertising on boot - no key press needed!
-CONFIG_BT_DISCARDABLE_EXPERIMENTAL=y
-
-# Enable built-in LED on nice!nano
+# LED settings for pairing indication
 CONFIG_ZMK_LED=y
 CONFIG_LED=y
+CONFIG_ZMK_LED_BRT=60
 
-# LED brightness (0-100)
-CONFIG_ZMK_LED_BRT=50
+# Auto advertising on boot (easier pairing)
+CONFIG_BT_PERIPHERAL_PREF_TIMEOUT=0
