--- a/config/boards/shields/caldera/caldera.conf
+++ b/config/boards/shields/caldera/caldera.conf
@@ -1,4 +1,19 @@
-CONFIG_ZMK_SLEEP=y
+# FORM.MATRIX Configuration
+# Bluetooth
+CONFIG_ZMK_BLE=y
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
-CONFIG_ZMK_KEYBOARD_NAME="Caldera"
+
+# Keyboard name
+CONFIG_ZMK_KEYBOARD_NAME="FORM.MATRIX"
+
+# Sleep
+CONFIG_ZMK_SLEEP=y
+
+# Consumer keys
 CONFIG_ZMK_HID_CONSUMER_REPORT_USAGES_BASIC=y
+
+# Battery
+CONFIG_ZMK_BATTERY_REPORTING=y
+
+# LED (for nice!nano onboard LED)
+CONFIG_ZMK_LED=y
